--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,16 @@ dependencies:
   flutter_admin_scaffold: ^1.1.2
   sidebarx: ^0.14.0
   readmore: ^2.2.0
+  dio: ^4.0.6
+  
+  json_annotation: ^4.7.0
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
